# rendervault

./: .clang-format  .gitignore  CMakeLists.txt
include/rendervault/core/: GlfwWrapper.hpp  Initializer.hpp  RenderCore.hpp  glfw_wrapper.hpp  initializers.hpp  render_engine.h  render_engine.hpp
include/rendervault/utils/: Logger.hpp  converters.hpp  logger.hpp
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  GlfwWrapper.cpp  Initializer.cpp  RenderCore.cpp  glfw_wrapper.cpp  initializers.cpp  render_engine.cpp
src/utils/: CMakeLists.txt  Logger.cpp  logger.cpp
tests/: CMakeLists.txt
